# macroboard

./: Cargo.toml  README.md  build.rs  flake.nix  module.nix  package.nix
.github/workflows/: ci.yml  update.yml
src/: config.rs  evdev.rs  main.rs
